--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8000,6 +8000,10 @@ button.close {
     .hidden-xs {
         display: none !important
     }
+
+    .img-responsive{
+        width: 56%;
+    }
 }
 
 @media (min-width:768px) and (max-width:991px) {
