--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ a:hover {
 }
 
 .navbar-brand img[src$=svg] {
-    min-width: 100px;
+    min-width: 200px;
 }
 
 .nav-center .navbar-brand img {
@@ -446,6 +446,8 @@ ul a{
     width: 110px;
     height: 110px;
 }
+
+
 /********************************     MEDIA QUERY  **************************/
 @media (min-width: 768px) {
 
@@ -939,7 +941,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation.webp");
 }
 
 
