--- a/style.css
+++ b/style.css
@@ -451,6 +451,14 @@ ul a{
     width: 230px;
     height: 230px;
 }
+.logoimg{
+    width: 200px;
+    height: 50px;
+}
+.logoimg2{
+    width: 150px;
+    height: 150px;
+}
 
 
 /********************************     MEDIA QUERY  **************************/
