--- a/style.css
+++ b/style.css
@@ -278,7 +278,8 @@ a:hover {
 }
 
 .navbar-brand {
-    height: auto;
+    width: 200px;
+    height: 50px;
     padding: 3px 15px;
     font-size: 25px;
     font-weight: normal;
@@ -287,14 +288,10 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
     margin: 0 5px 0 0;
     display: inline;
 }
 
-.navbar-brand img[src$=svg] {
-    min-width: 200px;
-}
 
 .nav-center .navbar-brand img {
     margin: 0;
