--- a/style.css
+++ b/style.css
@@ -438,8 +438,8 @@ ul a{
 }
 
 .img{
-    width: 110px;
-    height: 110px;
+    width: 115px; ;
+    height: 115px;;
 }
 
 .img-responsive{
@@ -820,8 +820,13 @@ font-size: 16px;
     max-width: 400px;
     margin: auto auto auto auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
+}
+
+.social1{
+    display: flex;
+    justify-content: space-between;
 }
 
 h2 {
