--- a/style.css
+++ b/style.css
@@ -283,6 +283,8 @@ a:hover {
     font-weight: normal;
     font-weight: 600;
     line-height: 44px;
+    width: 200px;
+    height: 50px;
 }
 
 .navbar-brand img {
@@ -438,8 +440,8 @@ ul a{
 }
 
 .img{
-    width: 115px; ;
-    height: 115px;;
+    width: auto;
+    height: auto;
 }
 
 .img-responsive{
